2006-05-15  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle

=== release 0.10.0 ===

2006-04-26  Edward Hervey  <edward@fluendo.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.10.0

2006-04-26  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	* pitivi/ui/viewer.py:
	Add debugging to ease reporting by users

2006-04-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Add error handling imporoved.
	Add fakesinks to audio pads if there's no video, otherwise audio only
	files will not get discovered properly.
	* pitivi/pitivi.py:
	* pitivi/ui/viewer.py:
	Revert gtk.gdk.threads_* patches.
	If we start going down that alley, it means putting those function calls
	everywhere.
	Instead, just put the critical parts in a gobject.idle_add()

2006-04-25  Edward Hervey  <edward@fluendo.com>

	* pitivi.spec.in:
	Better group and ExclusiveArch for rpm.
	Patch by <ahziem1@mailbolt.com>

2006-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/viewer.py:
	Remove gtk.Frame from useless places.
	Made the timeline advanced view switcher a ToolAction and add it to the
	menu and the toolbar.

2006-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	Call gtk.gdk.threads_init() to inform pygtk that we might be doing calls
	from remote threads.
	* pitivi/ui/viewer.py:
	The fix to the threading issue was in fact to call
	gtk.gdk.threads_enter() and _leave() before and after calls to gtk
	being made from a non-main thread.

2006-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	gst-python doesn't have the GstError quarks defined yet. Let's just
	use the strings instead.

2006-04-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	We need gnonlin 0.10.2 released 3 days ago.
	* pitivi/ui/viewer.py:
	Some threading madness.... That was a nasty bug.

2006-04-22  Edward Hervey  <edward@fluendo.com>
